using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant 
{
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_DEATH = "Dead";
    public const string ANIM_RUN = "Run";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_DANCE = "Dance";

    public const string WEAPON_AXE = "Axe";
    public const string WEAPON_BOOMERANG = "Boomerang";
    public const string WEAPON_SWORD = "Sword";

    public const string GAME_BOT = "Bot";
    public const string GAME_PLAYER = "Player";

    public const string _MUSICVOLUME = "MusicVolume";
    public const string _SEVOLUME = "SEVolume";

    [Header("Weapon Price")]
    public const int PRICE_AXE = 50 ;
    public const int PRICE_BOOMERANG = 70 ;
    public const int PRICE_SWORD = 100 ;


}
